--- a/ToDoList/ToDoList.Android/ToDoList.Android.csproj
+++ b/ToDoList/ToDoList.Android/ToDoList.Android.csproj
@@ -96,5 +96,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\outline_delete_black_24dp.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\calendar.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
