--- a/ToDoList/ToDoList/ToDoList.csproj
+++ b/ToDoList/ToDoList/ToDoList.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Domain\" />
+    <Folder Include="Resources" />
     <Folder Include="Resources\" />
   </ItemGroup>
 </Project>
